feat(): cambios sonar